fixed alignment

--- a/style.css
+++ b/style.css
@@ -2,15 +2,23 @@
 
 html {
     display: flex;
+    flex-flow: column wrap;
     font-family: Helvetica;
     font-size: 22px;
     color: seashell;
     background-color: black;
     opacity: 0.9;
-    text-align: center;
+    text-align: center !important;
+    justify-content: center !important;
     
   }
   
+  #under-header {
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
   header {
     top: 0;
     background-color: black;
@@ -23,8 +31,8 @@ html {
     align-items: center;
     justify-content: flex-end;
   }
-  
-  
+
+
   #logo {
     position: absolute;
     left: 0px;
@@ -64,6 +72,7 @@ html {
   
   #tea {
     width: 1000px;
+    padding: 100px;
   }
   #figs {
     width: 100%;
@@ -88,7 +97,7 @@ html {
   
   #loc {
     background-image: url('./resources/img-locations-background.jpg');
-    
+
     height: 500px;
     width: 1200px;
     align-content: center;
